<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/planetNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rajdhani_bold"
            android:includeFontPadding="false"
            android:text="@string/defaultPlanetName"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/planetIncomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/rajdhani_bold"
            android:includeFontPadding="false"
            android:text="@string/defaultIncome"
            android:textColor="@color/colorNumber"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planetNameText"/>

        <ImageButton
            android:id="@+id/planetImageButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:background="@null"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planetIncomeText"
            app:srcCompat="@drawable/pl_earth"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_weight="3"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/rajdhani_bold"
                android:gravity="bottom|center"
                android:includeFontPadding="false"
                android:text="@string/defaultLaunchName"
                android:textAllCaps="false"
                android:textColor="@color/colorText"
                android:textSize="30sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                >

                <ProgressBar
                    android:id="@+id/incomeProgress"
                    style="@style/amountProgress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="1000"
                    android:progress="1000"/>

                <TextView
                    android:id="@+id/incomeText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/rajdhani_bold"
                    android:gravity="center"
                    android:text="@string/defaultLaunchIncome"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_info"
                    android:fontFamily="@font/rajdhani_bold"
                    android:gravity="center"
                    android:text="@string/defaultLaunchTime"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <Button
                        android:id="@+id/launchButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/bg_button_launch"
                        android:fontFamily="@font/rajdhani_bold"
                        android:stateListAnimator="@null"
                        android:textAllCaps="false"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/launchLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/rajdhani_bold"
                        android:gravity="center|start"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp"
                        android:text="@string/launchLabel"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/costText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/rajdhani_bold"
                        android:gravity="center_vertical|end"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:text="@string/defaultLaunchCost"
                        android:textColor="@color/colorText"
                        android:textSize="18sp"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </android.support.constraint.ConstraintLayout>

</FrameLayout>